Add support for installing onto block device image files.
Multiple image files can be specified via "--image=/path/to/image[:name]"
on the anaconda command line. The name cannot contain colons.

Whenever disk images are specified, they automatically become the
only disks visible to anaconda, as if "ignoredisks --only-use" had
been used.

Fow now, only normal disk images are supported. Do not try to build
a fwraid or mpath in image files and expect anaconda to handle it
correctly.

Don't log to system log for disk image installs. For one thing, it adds
a huge amount of text to /var/log/messages. It also has some problem
that prevents subsequent attempts to connect to the syslog socket (from
anaconda_log.py, anyway) to fail.

Don't allow configuration of network devices during disk image installs.
Also, don't write anything in /etc/sysconfig on the host system
when doing image installs.

Don't start auditd when doing an image install.

Don't run setupTimezone if installing to disk image file(s). We don't
want to change settings on the host system.

Don't start or stop iscsi, fcoe, dasd, or zfcp during image installs.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -216,6 +216,7 @@ update-desktop-database &> /dev/null || :
 %{_libdir}/python*/site-packages/pyanaconda/*
 %{_libdir}/python*/site-packages/log_picker/*
 %{_libdir}/anaconda*
+%{_bindir}/anaconda-image-cleanup
 %ifarch %livearches
 %{_bindir}/liveinst
 %{_sbindir}/liveinst
