Change the device reinitialization dialog
Resolves: rhbz#657376

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -161,6 +161,7 @@ data/ui/lukspassphrase.glade.h
 data/ui/network.glade.h
 data/ui/tasksel.glade.h
 data/ui/zfcp-config.glade.h
+data/ui/reinitialize-dialog.glade.h
 
 # lang-table
 data/lang-table.h
