Change the device reinitialization dialog
Resolves: rhbz#657376

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -165,6 +165,7 @@ ui/lukspassphrase.glade.h
 ui/network.glade.h
 ui/tasksel.glade.h
 ui/zfcp-config.glade.h
+ui/reinitialize-dialog.glade.h
 
 # lang-table
 lang-table.h
