remove unused variables
There were two kinds of unused but set variables:
 - the really pointless ones
 - the ones whose only purpose was to silence the warnings
    about ignoring the return values from functions declared with
    __attribute__((__warn_unused_result__))
Since gcc 4.5 the warnings can be disabled using -Wno-unused-result,
so the variables are no longer necessary.
Then -Wno-unused-but-set-variable is an overkill, so drop it.

--- a/configure.ac
+++ b/configure.ac
@@ -187,7 +187,7 @@ fi
 
 # GCC likes to bomb out on some ridiculous warnings.  Add your favorites
 # here.
-SHUT_UP_GCC="-Wno-unused-but-set-variable"
+SHUT_UP_GCC="-Wno-unused-result"
 
 # Add remaining compiler flags we want to use
 CFLAGS="$CFLAGS -Wall -Werror $SHUT_UP_GCC -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE"
